fix overflow

--- a/module2-solution/style.css
+++ b/module2-solution/style.css
@@ -1,6 +1,7 @@
 * {
 	box-sizing: border-box;
   font-family: "Times New Roman", Times, serif;
+  overflow: auto;
 }
 
 /* column set up */
